--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
 
-  .button {
+.site-header {
+    background-color: #333; 
+    color: white;
+    padding: 20px 0;
+    text-align: center;
+    position: fixed;      
+    top: 0;
+    width: 100%;
+    z-index: 1000;        
+    box-shadow: 0px 4px 2px -2px gray; 
+}
+
+.logo {
+    font-size: 50px;         /* Large font size for the logo text */
+    font-weight: bold;       /* Bold text for emphasis */
+    font-family: 'Arial', sans-serif; /* Change to your preferred font */
+    text-transform: uppercase; /* Make the text uppercase */
+}
+
+/* Add some padding to the body to account for the fixed header */
+body {
+    padding-top: 80px;       /* Adjust this value to fit the header height */
+}
+
+.button {
     border: none;
     color: white;
     padding: 15px 32px;
@@ -9,15 +33,15 @@
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
+}
 
-  .button5 {
+.button5 {
     background-color: white;
     color: black;
     border: 2px solid #551555;
-  }
+}
 
-  .button5:hover {
+.button5:hover {
     background-color: #551555;
     color: white;
-  }
+}
