--- a/style.css
+++ b/style.css
@@ -1,27 +1,19 @@
 
-.site-header {
-    background-color: #333; 
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-    position: fixed;      
-    top: 0;
-    width: 100%;
-    z-index: 1000;        
-    box-shadow: 0px 4px 2px -2px gray; 
+body {
+    background-color: #f5f3ee;
+    color: #333;               /* Optional: set default text color */
+    font-family: 'Arial', sans-serif; /* Optional: set default font family */
+    margin: 0;                 /* Remove default body margin */
+    padding: 0;                /* Remove default body padding */
 }
 
 .logo {
-    font-size: 50px;         /* Large font size for the logo text */
-    font-weight: bold;       /* Bold text for emphasis */
-    font-family: 'Arial', sans-serif; /* Change to your preferred font */
-    text-transform: uppercase; /* Make the text uppercase */
+    font-size: 50px;
+    font-family: "Lucida Grande", monospace;
+    color: #8A2BE2;
+    text-align: center;
 }
 
-/* Add some padding to the body to account for the fixed header */
-body {
-    padding-top: 80px;       /* Adjust this value to fit the header height */
-}
 
 .button {
     border: none;
