--- a/style_.css
+++ b/style_.css
@@ -1,27 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
-
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);*/
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-
   font-size: 10px;
-
   --heading-height: 30em;
 }
 
 body {
-font-family: 'Corporative', sans-serif;
-  min-height: 100vh;
-  background-color: #b1b1b1;
+    font-family: 'Raleway', sans-serif;
+    min-height: 100vh;
+    background-color: rgb(224,204,200);
+    margin-top: 40px;
 }
-
-
-form {
-  margin-top: 110px;
-}
-
 
 header {
   position: fixed;
-  height: 0px;
+  height: 50px;
   left: 0;
   top: 0;
   display: flex; 
@@ -30,7 +23,7 @@ header {
   position: fixed;
   width: 100%;
   text-align: center;
-  background-color: rgb(206, 206, 206);
+  background-color: rgb(255, 255, 255);
 }
 
 /*
@@ -55,7 +48,7 @@ header::before {
   left: 0;
   top: 0px;
   width: 100%;
-  background-image: url("images/bild5.png");
+  background-image: url("images/header.svg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,8 +60,8 @@ header::before {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgb(74, 74, 117);
-  opacity: 0.3;
+  background-color: rgb(128, 17, 0);
+  opacity: 0.1;
 }
 
 .sample-header-section {
@@ -79,7 +72,8 @@ header::before {
   margin-right: auto;
   color: white;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-  font-family: "Montserrat", sans-serif;
+  /*font-family: "Montserrat", sans-serif;*/
+  font-family: "Raleway", sans-serif;
   text-align: center;
 }
 
@@ -94,7 +88,6 @@ header::before {
   margin-right: auto;
   padding: 40px;
 }
-
 
 .footer {
   background-color: white;
@@ -116,29 +109,29 @@ header::before {
 h1 {
   font-size: 90px;
   font-weight: 700;
-  letter-spacing: 6px;
+  letter-spacing: 8px;
   /*padding: 10rem 0 0 4.5rem;*/
-  text-shadow: .022em .022em .022em #3b383c;
-  color: rgb(255, 246, 246);
+  text-shadow: .022em .022em .022em rgb(128, 17, 0);
+  color: rgb(255, 255, 255);
 }
 
 /* Headers like: ABout labbloggr, who are we, we want to hear from you */
 h2 {
   font-weight: 500;
   font-size: 50px;
-  color: rgb(62, 11, 11);
+  color: rgb(128, 17, 0);
 }
 
 /* FAQ */
 h3 {
   font-size: 25px;
-  color: rgb(62, 11, 11);
+  color: rgb(128, 17, 0);
 }
 
 /* Footer text */
 h4 {
   font-size: 12px;
-  color: rgb(62, 11, 11);
+  color: rgb(128, 17, 0);
   font-weight: lighter;
 }
 
@@ -149,8 +142,8 @@ main {
 
 p {
     font-size: 20px;
-    margin-bottom: 1.5em;
-    color: rgb(62, 11, 11);
+    /*margin-bottom: 1.5em;*/
+    color: rgb(128, 17, 0);
 }
 
 .button {
@@ -162,28 +155,53 @@ p {
   cursor: pointer;
   display: inline-block;
   font-family: 'Corporative', sans-serif;
-  padding: 7px 20px;
+  padding: 5px 20px;
   text-align: center;
   text-decoration: none;
   transition: all 250ms;
   border: 0;
-  font-size: 19px;
+  font-size: 16px;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
-
 
 .button:hover {
   box-shadow: rgba(60, 44, 35, 0.35) 0 -25px 18px -14px inset,rgba(187, 99, 44, 0.25) 0 1px 2px,rgba(187, 101, 44, 0.25) 0 2px 4px,rgba(187, 134, 44, 0.25) 0 4px 8px,rgba(187, 94, 44, 0.25) 0 8px 16px,rgba(187, 99, 44, 0.25) 0 16px 32px;
   transform: scale(1.05) rotate(-1deg);
 }
 
+.button2{
+  /*background-color: #ffffff;*/
+  background-color: transparent;
+  border-radius: 100px;
+  /*box-shadow: rgba(215, 158, 131, 0.048) 0 -25px 18px -14px inset,rgba(187, 89, 44, 0.06) 0 1px 2px,rgba(187, 99, 44, 0.053) 0 2px 4px,rgba(187, 118, 44, 0.15) 0 4px 8px,rgba(187, 84, 44, 0.15) 0 8px 16px,rgba(187, 99, 44, 0.15) 0 16px 32px;*/
+  color: rgb(128, 17, 0);
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Corporative', sans-serif;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 250ms;
+  border: 0;
+  font-size: 18px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  letter-spacing: 3px;
+}
+
+.button2:hover {
+    color: rgb(255, 255, 255);
+    background-color: rgb(128, 17, 0);
+    box-shadow: rgba(60, 44, 35, 0.35) 0 -25px 18px -14px inset,rgba(187, 99, 44, 0.25) 0 1px 2px,rgba(187, 101, 44, 0.25) 0 2px 4px,rgba(187, 134, 44, 0.25) 0 4px 8px,rgba(187, 94, 44, 0.25) 0 8px 16px,rgba(187, 99, 44, 0.25) 0 16px 32px;
+}
+
 .box{
-    width: 300px;
+    width: 325px;
     height: 200px;
     padding: 15px;
-    border: 2px solid #53006f;
     border-radius: 25px;
     background-color: #f5f3ee;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -203,7 +221,6 @@ p {
 
 .box p {
     font-size: 16px; /* Adjusted font size for readability */
-    color: #333; /* Darker color for better contrast */
 }
 
 
@@ -281,7 +298,12 @@ td {
   justify-content: space-around; 
   align-items: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+}
+
+/* For header + short text, FAQ header and text, contact header and text*/
+.div2{
+    margin-bottom: 130px;
 }
 
 address{
