--- a/style_.css
+++ b/style_.css
@@ -94,7 +94,7 @@ header::before {
   color:#556B2F;
   padding: 10px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 100px;
 }
 .footer a {
   color: #556B2F;
@@ -120,6 +120,8 @@ h2 {
   font-weight: 500;
   font-size: 50px;
   color: rgb(128, 17, 0);
+  padding-left: 20px; /* Adjust the left padding */
+    padding-right: 20px; /* Adjust the right padding */
 }
 
 /* FAQ */
@@ -251,21 +253,7 @@ input[type="text"], input[type="password"] {
     display: block; /* ensures inputs do not line up inline */
     width: 90%; /* responsive width */
 }
-  
-input[type="submit"] {
-    background-color: #ffffff; /* matching button styles */
-    color: rgb(128, 17, 0); /* text color from button class */
-    padding: 10px 15px;
-    border-radius: 100px; /* rounded corners */
-    border: none; /* no border */
-    cursor: pointer; /* pointer cursor on hover */
-    transition: background-color 0.3s; /* smooth transition for hover effect */
-    font-size: 16px; /* consistent font size with other buttons */
-}
-  
-input[type="submit"]:hover {
-    background-color: #ddd; /* lighter background on hover */
-}
+
 
 table {
   border: 100px;
@@ -304,6 +292,13 @@ td {
 /* For space between contant and  initial header + short text. Ex: FAQ header and text, contact header and text*/
 .div2{
     margin-bottom: 130px;
+}
+
+.div_login{
+    width: 700px;
+    height: 200px;
+    padding-left: 500px; /* Adjust the left padding */
+    padding-right: 20px; /* Adjust the right padding */
 }
 
 address{
