--- a/style_.css
+++ b/style_.css
@@ -152,6 +152,7 @@ p {
   /*background-color: #ffffff;*/
   background-color: transparent;
   border-radius: 100px;
+  border: 2px solid rgb(128, 17, 0);
   /*box-shadow: rgba(215, 158, 131, 0.048) 0 -25px 18px -14px inset,rgba(187, 89, 44, 0.06) 0 1px 2px,rgba(187, 99, 44, 0.053) 0 2px 4px,rgba(187, 118, 44, 0.15) 0 4px 8px,rgba(187, 84, 44, 0.15) 0 8px 16px,rgba(187, 99, 44, 0.15) 0 16px 32px;*/
   color: rgb(128, 17, 0);
   cursor: pointer;
@@ -161,18 +162,19 @@ p {
   text-align: center;
   text-decoration: none;
   transition: all 250ms;
-  border: 0;
-  font-size: 16px;
+  font-size: 21px;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
 }
 
 .button:hover {
-  box-shadow: rgba(60, 44, 35, 0.35) 0 -25px 18px -14px inset,rgba(187, 99, 44, 0.25) 0 1px 2px,rgba(187, 101, 44, 0.25) 0 2px 4px,rgba(187, 134, 44, 0.25) 0 4px 8px,rgba(187, 94, 44, 0.25) 0 8px 16px,rgba(187, 99, 44, 0.25) 0 16px 32px;
-  transform: scale(1.05) rotate(-1deg);
+    color: rgb(255, 255, 255);
+    background-color: rgb(128, 17, 0);
+    box-shadow: rgba(60, 44, 35, 0.35) 0 -25px 18px -14px inset,rgba(187, 99, 44, 0.25) 0 1px 2px,rgba(187, 101, 44, 0.25) 0 2px 4px,rgba(187, 134, 44, 0.25) 0 4px 8px,rgba(187, 94, 44, 0.25) 0 8px 16px,rgba(187, 99, 44, 0.25) 0 16px 32px;
 }
 
+/* Button 2 is the style of the buttons in the top header */
 .button2{
   /*background-color: #ffffff;*/
   background-color: transparent;
