--- a/style_.css
+++ b/style_.css
@@ -86,7 +86,7 @@ header::before {
   max-width: 90%;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px;
+  padding: 8vw;
 }
 
 .footer {
@@ -118,16 +118,15 @@ h1 {
 /* Headers like: ABout labbloggr, who are we, we want to hear from you */
 h2 {
   font-weight: 500;
-  /*font-size: 50px;*/
   font-size: 5vw;
   color: rgb(128, 17, 0);
-  padding-left: 20px; /* Adjust the left padding */
-  padding-right: 20px; /* Adjust the right padding */
+  padding-left: 5vw; /* Adjust the left padding */
+  padding-right: 5vw; /* Adjust the right padding */
 }
 
 /* FAQ */
 h3 {
-  font-size: 25px;
+  font-size: 2vw;
   color: rgb(128, 17, 0);
 }
 
@@ -144,7 +143,7 @@ main {
 }*/
 
 p {
-    font-size: 1vw;
+    font-size: 1.5vw;
     /*margin-bottom: 1.5em;*/
     color: rgb(128, 17, 0);
 }
@@ -152,18 +151,19 @@ p {
 .button {
   /*background-color: #ffffff;*/
   background-color: transparent;
+  white-space: nowrap; /* Makes the text stay on one row */
   border-radius: 100px;
-  border: 2px solid rgb(128, 17, 0);
+  border: 0.2vw solid rgb(128, 17, 0);
   /*box-shadow: rgba(215, 158, 131, 0.048) 0 -25px 18px -14px inset,rgba(187, 89, 44, 0.06) 0 1px 2px,rgba(187, 99, 44, 0.053) 0 2px 4px,rgba(187, 118, 44, 0.15) 0 4px 8px,rgba(187, 84, 44, 0.15) 0 8px 16px,rgba(187, 99, 44, 0.15) 0 16px 32px;*/
   color: rgb(128, 17, 0);
   cursor: pointer;
   display: inline-block;
   font-family: 'Corporative', sans-serif;
-  padding: 5px 20px;
+  padding: 0.5vw 1vw;
   text-align: center;
   text-decoration: none;
   transition: all 250ms;
-  font-size: 21px;
+  font-size: 1.5vw;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -303,8 +303,9 @@ td {
   display: flex; 
   justify-content: space-around; 
   align-items: center;
-  padding-left: 30vw; /* Adjust the left padding */
-  padding-right: 30vw; /* Adjust the right padding */
+  padding-left: 20vw; /* Adjust the left padding */
+  padding-right: 20vw; /* Adjust the right padding */
+  margin-top: 10vw;
 
 }
 
@@ -312,6 +313,7 @@ td {
     width: 70vw;
     height: 18vw;
     margin-top: 8vw;
+    margin-bottom: 10vw;
     padding-left: 10vw; /* Adjust the left padding */
     padding-right: 10vw; /* Adjust the right padding */
 }
