--- a/style_.css
+++ b/style_.css
@@ -372,3 +372,18 @@ address{
   font-style: normal;
   font-weight: 700;
 }
+
+.topnav {
+  background-color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  width: 15vw;
+  padding: 1vw;
+  /*margin-top: 8px;*/
+  /*margin-right: 16px;*/
+  border: 0.2vw solid rgb(128, 17, 0);
+  border-radius: 50vw;
+  font-size: 1.5vw;
+}
