--- a/style_.css
+++ b/style_.css
@@ -26,22 +26,6 @@ header {
   background-color: rgb(255, 255, 255);
 }
 
-/*
-header::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 5em;
-  width: 100%;
-  height: calc(var(--heading-height) + 10em);
-  z-index: -1;
-  background: 
-    linear-gradient(rgba(92, 90, 90, 0), rgba(152, 146, 146, 0.6)),
-    url("header.svg design.svg"), no-repeat center / cover;
-  background-size: cover;
-  border-bottom: .2em solid #fff;
-}*/
 
 .sample-header {
   position: fixed;
@@ -94,7 +78,7 @@ header::before {
   padding: 10px;
   text-align: center;
   /*margin-top: 100px;*/
-  margin-top: 10vw;
+  margin-top: 15vw;
 }
 .footer a {
   color:rgb(128, 17, 0);
@@ -120,7 +104,7 @@ h2 {
   font-weight: 500;
   font-size: 5vw;
   color: rgb(128, 17, 0);
-  padding-left: 5vw; /* Adjust the left padding */
+  padding-left: 0vw; /* Adjust the left padding */
   padding-right: 5vw; /* Adjust the right padding */
 }
 
@@ -213,11 +197,11 @@ p {
 .box{
     /*width: 325px;*/
     width: 20vw;
-    height: 13vw;
+    height: 19vw;
     padding: 15px;
     border-radius: 25px;
     background-color: #f5f3ee;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(85, 36, 3, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     align-content: space-around;
     display: flex;
     flex-direction: column; 
@@ -250,23 +234,60 @@ p {
     text-align: center; 
 }
 
-label, input[type="text"], input[type="password"]{
-    font-size: 1.7vw; 
+label, input[type="text"], input[type="password"], input[type="email"]{
+    font-size: 1.5vw; 
     color: rgb(62, 11, 11); /* consistent color */
     font-family: 'Corporative', sans-serif; /* ensures font consistency */
 }
   
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"]{
     padding: 0.7em; /* comfortable text entry */
     margin-bottom: 0.8vw;
     border: 1px solid #ccc; /* subtle border */
     display: block; /* ensures inputs do not line up inline */
     width: 90%; /* responsive width */
 }
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus{
   border: 2px solid rgb(128, 17, 0); /* Change the border color */
   outline: none; /* Removes the default blue outline */
   box-shadow: 0 0 5px rgba(128, 17, 0, 0.5); /* Optional: add a subtle glow effect */
+}
+label, 
+select {
+    font-size: 1.5vw; 
+    color: rgb(62, 11, 11); /* consistent color */
+    font-family: 'Corporative', sans-serif; /* ensures font consistency */
+}
+
+select {
+    padding: 0.7em; /* comfortable text entry */
+    margin-bottom: 0.8vw;
+    border: 1px solid #ccc; /* subtle border */
+    display: block; /* ensures inputs do not line up inline */
+    width: 90%; /* responsive width */
+    appearance: none; /* Remove default styling */
+    background: white; /* Background color */
+    border-radius: 4px; /* Rounded corners */
+}
+
+select:focus {
+    border: 2px solid rgb(128, 17, 0); /* Change the border color */
+    outline: none; /* Removes the default blue outline */
+    box-shadow: 0 0 5px rgba(128, 17, 0, 0.5); /* Optional: add a subtle glow effect */
+}
+
+/* Optional: Add a custom arrow */
+select::after {
+    content: '▼'; /* Down arrow */
+    position: absolute; /* Positioning */
+    right: 10px; /* Space from the right */
+    pointer-events: none; /* Prevent interaction */
+}
+
+.placeholder-option {
+  font-weight: lighter;
+  /*color: #ccc !important;*/
+  font-style: italic;
 }
 
 
@@ -328,15 +349,6 @@ tr:hover {
 
 }
 
-/*
-.div_login{
-    width: 70vw;
-    height: 18vw;
-    margin-top: 8vw;
-    margin-bottom: 10vw;
-    padding-left: 10vw; 
-    padding-right: 10vw;
-}*/
 
 .div_login {
   width: 70vw;
@@ -381,8 +393,6 @@ address{
   float: right;
   width: 15vw;
   padding: 1vw;
-  /*margin-top: 8px;*/
-  /*margin-right: 16px;*/
   border: 0.2vw solid rgb(128, 17, 0);
   border-radius: 50vw;
   font-size: 1.5vw;
