--- a/styling/style_.css
+++ b/styling/style_.css
@@ -32,7 +32,7 @@ header {
   left: 0;
   top: 0px;
   width: 100%;
-  background-image: url("images/header.svg");
+  background-image: url("../images/header.svg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
